avoid scrollbars in layerManager

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -636,7 +636,7 @@ ul.panel-body-wide {
       height: 3em;
       line-height: 3em;
       padding: 0;
-      overflow-x:hidden;
+      overflow: hidden;
     }
     input[type=range] {
       width: 8em;
